[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Items/Armour/ChestArmour01_World.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/Fonts/dum1.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Items/WorldItem.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -32, -48 ), Vector2( -16, -64 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -360.0, -45.0, 360.0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 14.769

[node name="WorldItem" type="Node2D"]
script = ExtResource( 3 )

[node name="Control" type="Node2D" parent="."]
z_index = 999

[node name="RigidBody2D" type="RigidBody2D" parent="Control"]
collision_layer = 512
collision_mask = 2147484160
mode = 2
mass = 0.00102041
gravity_scale = 0.0
linear_damp = 1.0
angular_damp = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/RigidBody2D"]
position = Vector2( 0, -24 )
shape = SubResource( 5 )

[node name="ItemName" type="Label" parent="Control/RigidBody2D"]
margin_left = -10.0
margin_top = -32.0
margin_right = 10.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/RigidBody2D/ItemName"]
self_modulate = Color( 0, 0, 0, 0.588235 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.788235, 0.788235, 0.788235, 1 )
position = Vector2( -32, -48 )
rotation = -6.28319
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Drop = SubResource( 3 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
scale = Vector2( 1, 0.5 )
shape = SubResource( 4 )
[connection signal="gui_input" from="Control/RigidBody2D/ItemName/Panel" to="." method="_on_Panel_gui_input"]
[connection signal="mouse_entered" from="Control/RigidBody2D/ItemName/Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Control/RigidBody2D/ItemName/Panel" to="." method="_on_Panel_mouse_exited"]
[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
